--- a/create_new_csv.ipynb
+++ b/create_new_csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -96,11 +96,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 5421 entries, 0 to 7652\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   name      5421 non-null   object \n",
+      " 1   rating    5421 non-null   object \n",
+      " 2   genre     5421 non-null   object \n",
+      " 3   year      5421 non-null   int64  \n",
+      " 4   released  5421 non-null   object \n",
+      " 5   score     5421 non-null   float64\n",
+      " 6   votes     5421 non-null   float64\n",
+      " 7   director  5421 non-null   object \n",
+      " 8   writer    5421 non-null   object \n",
+      " 9   star      5421 non-null   object \n",
+      " 10  country   5421 non-null   object \n",
+      " 11  budget    5421 non-null   float64\n",
+      " 12  gross     5421 non-null   float64\n",
+      " 13  company   5421 non-null   object \n",
+      " 14  runtime   5421 non-null   float64\n",
+      "dtypes: float64(5), int64(1), object(9)\n",
+      "memory usage: 677.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
