Add median, mean and mode analysis

--- a/2. Análise Python/movies_python_analysis.ipynb
+++ b/2. Análise Python/movies_python_analysis.ipynb
@@ -735,6 +735,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year           2001.66\n",
+       "score             6.39\n",
+       "votes        115066.13\n",
+       "budget     36009170.47\n",
+       "gross     103229653.33\n",
+       "runtime         108.15\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mean(numeric_only='true')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year          2002.00\n",
+       "score            6.50\n",
+       "votes        52000.00\n",
+       "budget    21800000.00\n",
+       "gross     36869414.00\n",
+       "runtime        105.00\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.median(numeric_only='true')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>score</th>\n",
+       "      <th>votes</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>gross</th>\n",
+       "      <th>runtime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>6.40</td>\n",
+       "      <td>15000.00</td>\n",
+       "      <td>20000000.00</td>\n",
+       "      <td>14000000.00</td>\n",
+       "      <td>101.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  score    votes      budget       gross  runtime\n",
+       "0  2002   6.40 15000.00 20000000.00 14000000.00   101.00"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.mode(numeric_only='true')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 238,
    "metadata": {},
    "outputs": [
